Improve help command UX and add group chat toggle
Enhanced the /paradigm help command with improved formatting, clickable and hoverable module lists, and better module detail display. Added a config option to enable or disable the Group Chat feature and updated related modules to respect this setting. Improved join/leave message suppression logic and made minor null-safety and UX improvements across chat modules.